// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavigation.Link renders 1`] = `
<styled.a
  href="#"
  to={null}
>
  <Styled(Box)
    horizontal={3}
    vertical={3}
  >
    <Styled(ColoredTextProvider)
      active={false}
    >
      <Text
        block={false}
        bold={false}
        invert={false}
        size="medium"
      >
        Home
      </Text>
    </Styled(ColoredTextProvider)>
  </Styled(Box)>
</styled.a>
`;

exports[`SideNavigation.Link renders with active styles 1`] = `
<styled.a
  href="#"
  to={null}
>
  <Styled(Box)
    active={true}
    horizontal={3}
    vertical={3}
  >
    <Styled(ColoredTextProvider)
      active={true}
    >
      <Text
        block={false}
        bold={true}
        invert={false}
        size="medium"
      >
        Home
      </Text>
    </Styled(ColoredTextProvider)>
  </Styled(Box)>
</styled.a>
`;
